# backtest-dj

./: .env.example  .gitignore  README.md  docker-compose.yml
django-backend/: .gitignore  AGENT.md  Dockerfile  README.md  api-test.txt  pyproject.toml  requirements.txt
django-backend/backtester/: asgi.py  settings.py  urls.py  wsgi.py
django-backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
django-backend/core/migrations/: 0001_initial.py
django-backend/core/services/: backtest.py
django-backend/core/strategies/: factory.py  la_bomba.py  sma_cross.py
django-front/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
django-front/src/: App.css  App.tsx  index.css
django-front/src/components/: BacktestChart.tsx
django-front/src/components/layout/: Footer.tsx  Navbar.tsx
django-front/src/components/ui/: calendar.tsx
nginx/: Dockerfile  nginx.conf
